@@ -1,44 +1,50 @@
 <?php
 
-/* Force User.php include for EDIT_TOKEN_SUFFIX */
-require_once dirname(__FILE__) . "/../../includes/User.php";
-
-class nullClass {
-	public function handleOutput() { }
-	public function purgeRedundantText() { }
-}
 
 class UploadFromUrlTest extends ApiTestSetup {
 
-	function setUp() {
+	public function setUp() {
 		global $wgEnableUploads, $wgAllowCopyUploads;
+		parent::setup();
 
 		$wgEnableUploads = true;
 		$wgAllowCopyUploads = true;
-		parent::setup();
+		wfSetupSession();
 
 		ini_set( 'log_errors', 1 );
 		ini_set( 'error_reporting', 1 );
 		ini_set( 'display_errors', 1 );
+		
+		if ( wfLocalFile( 'UploadFromUrlTest.png' )->exists() ) {
+			$this->deleteFile( 'UploadFromUrlTest.png' );
+		}
 	}
 
-	function doApiRequest( $params, $data = null ) {
-		$session = isset( $data[2] ) ? $data[2] : array();
-		$_SESSION = $session;
-
-		$req = new FauxRequest( $params, true, $session );
+	protected function doApiRequest( $params ) {
+		$sessionId = session_id();
+		session_write_close();
+		
+		$req = new FauxRequest( $params, true, $_SESSION );
 		$module = new ApiMain( $req, true );
 		$module->execute();
 
-		return array( $module->getResultData(), $req, $_SESSION );
+		wfSetupSession( $sessionId );
+		return array( $module->getResultData(), $req );
 	}
 
-	function testClearQueue() {
+	/**
+	 * Ensure that the job queue is empty before continuing
+	 */
+	public function testClearQueue() {
 		while ( $job = Job::pop() ) { }
 		$this->assertFalse( $job );
 	}
 
-	function testLogin() {
+	/**
+	 * @todo Document why we test login, since the $wgUser hack used doesn't
+	 * require login
+	 */
+	public function testLogin() {
 		$data = $this->doApiRequest( array(
 			'action' => 'login',
 			'lgname' => self::$userName,
@@ -64,19 +70,16 @@ class UploadFromUrlTest extends ApiTestSetup {
 
 	/**
 	 * @depends testLogin
+	 * @depends testClearQueue
 	 */
-	function testSetupUrlDownload( $data ) {
-		global $wgUser;
-		$wgUser = User::newFromName( self::$userName );
-		$wgUser->load();
-		$data[2]['wsEditToken'] = $data[2]['wsToken'];
-		$token = md5( $data[2]['wsToken'] ) . EDIT_TOKEN_SUFFIX;
+	public function testSetupUrlDownload( $data ) {	
+		$token = self::$user->editToken();
 		$exception = false;
 
 		try {
 			$this->doApiRequest( array(
 				'action' => 'upload',
-			), $data );
+			) );
 		} catch ( UsageException $e ) {
 			$exception = true;
 			$this->assertEquals( "The token parameter must be set", $e->getMessage() );
@@ -91,7 +94,7 @@ class UploadFromUrlTest extends ApiTestSetup {
 			), $data );
 		} catch ( UsageException $e ) {
 			$exception = true;
-			$this->assertEquals( "One of the parameters sessionkey, file, url is required",
+			$this->assertEquals( "One of the parameters sessionkey, file, url, statuskey is required",
 				$e->getMessage() );
 		}
 		$this->assertTrue( $exception, "Got exception" );
@@ -109,7 +112,7 @@ class UploadFromUrlTest extends ApiTestSetup {
 		}
 		$this->assertTrue( $exception, "Got exception" );
 
-		$wgUser->removeGroup( 'sysop' );
+		self::$user->removeGroup( 'sysop' );
 		$exception = false;
 		try {
 			$this->doApiRequest( array(
@@ -124,8 +127,8 @@ class UploadFromUrlTest extends ApiTestSetup {
 		}
 		$this->assertTrue( $exception, "Got exception" );
 
-		$wgUser->addGroup( '*' );
-		$wgUser->addGroup( 'sysop' );
+		self::$user->addGroup( '*' );
+		self::$user->addGroup( 'sysop' );
 		$exception = false;
 		$data = $this->doApiRequest( array(
 			'action' => 'upload',
@@ -143,45 +146,65 @@ class UploadFromUrlTest extends ApiTestSetup {
 
 	/**
 	 * @depends testLogin
+	 * @depends testClearQueue
 	 */
-	function testDoDownload( $data ) {
-		global $wgUser;
-		$data[2]['wsEditToken'] = $data[2]['wsToken'];
-		$token = md5( $data[2]['wsToken'] ) . EDIT_TOKEN_SUFFIX;
+	public function testAsyncUpload( $data ) {
+		$token = self::$user->editToken();
 
-		$wgUser->addGroup( 'users' );
-		$data = $this->doApiRequest( array(
-			'action' => 'upload',
-			'filename' => 'UploadFromUrlTest.png',
-			'url' => 'http://bits.wikimedia.org/skins-1.5/common/images/poweredby_mediawiki_88x31.png',
-			'asyncdownload' => 1,
-			'token' => $token,
-		), $data );
+		self::$user->addGroup( 'users' );
 
-		$job = Job::pop();
-		$this->assertEquals( 'UploadFromUrlJob', get_class( $job ) );
-
- 		$status = $job->run();
-
-		$this->assertTrue( $status );
+		$data = $this->doAsyncUpload( $token, true );
+		$this->assertEquals( $data[0]['upload']['result'], 'Success' );
+		$this->assertEquals( $data[0]['upload']['filename'], 'UploadFromUrlTest.png' );
+		$this->assertTrue( wfLocalFile( $data[0]['upload']['filename'] )->exists() );
+		
+		$this->deleteFile( 'UploadFromUrlTest.png' );
 
 		return $data;
 	}
 
 	/**
 	 * @depends testLogin
+	 * @depends testClearQueue
 	 */
-	function testSyncDownload( $data ) {
-		global $wgUser;
-		$data[2]['wsEditToken'] = $data[2]['wsToken'];
-		$token = md5( $data[2]['wsToken'] ) . EDIT_TOKEN_SUFFIX;
+	public function testAsyncUploadWarning( $data ) {
+		$token = self::$user->editToken();
+
+		self::$user->addGroup( 'users' );
+
+
+		$data = $this->doAsyncUpload( $token );
+		
+		$this->assertEquals( $data[0]['upload']['result'], 'Warning' );
+		$this->assertTrue( isset( $data[0]['upload']['sessionkey'] ) );
+		
+		$data = $this->doApiRequest( array( 
+			'action' => 'upload',
+			'sessionkey' => $data[0]['upload']['sessionkey'],
+			'filename' => 'UploadFromUrlTest.png',
+			'ignorewarnings' => 1,
+			'token' => $token,
+		) );
+		$this->assertEquals( $data[0]['upload']['result'], 'Success' );
+		$this->assertEquals( $data[0]['upload']['filename'], 'UploadFromUrlTest.png' );
+		$this->assertTrue( wfLocalFile( $data[0]['upload']['filename'] )->exists() );
+		
+		$this->deleteFile( 'UploadFromUrlTest.png' );
+
+		return $data;
+	}
+
+	/**
+	 * @depends testLogin
+	 * @depends testClearQueue
+	 */
+	public function testSyncDownload( $data ) {
+		$token = self::$user->editToken();
 
 		$job = Job::pop();
 		$this->assertFalse( $job, 'Starting with an empty jobqueue' );
 
-		//$this->deleteFile( 'UploadFromUrlTest.png' );
-
-		$wgUser->addGroup( 'users' );
+		self::$user->addGroup( 'users' );
 		$data = $this->doApiRequest( array(
 			'action' => 'upload',
 			'filename' => 'UploadFromUrlTest.png',
@@ -194,25 +217,121 @@ class UploadFromUrlTest extends ApiTestSetup {
 		$this->assertFalse( $job );
 
 		$this->assertEquals( 'Success', $data[0]['upload']['result'] );
+		$this->deleteFile( 'UploadFromUrlTest.png' );
 
 		return $data;
 	}
-
-	/**
-	 * @depends testDoDownload
-	 */
-	function testVerifyDownload( $data ) {
-		$t = Title::newFromText( "UploadFromUrlTest.png", NS_FILE );
-
-		$this->assertTrue( $t->exists() );
-
+	
+	public function testLeaveMessage() {
+		$token = self::$user->editToken();
+		
+		$talk = self::$user->getTalkPage();
+		if ( $talk->exists() ) {
+			$a = new Article( $talk );
+			$a->doDeleteArticle( '' );
+		}
+		
+		$this->assertFalse( (bool)$talk->getArticleId( GAID_FOR_UPDATE ), 'User talk does not exist' );
+		
+		$data = $this->doApiRequest( array(
+			'action' => 'upload',
+			'filename' => 'UploadFromUrlTest.png',
+			'url' => 'http://bits.wikimedia.org/skins-1.5/common/images/poweredby_mediawiki_88x31.png',
+			'asyncdownload' => 1,
+			'token' => $token,
+			'leavemessage' => 1,
+			'ignorewarnings' => 1,
+		) );
+		
+		$job = Job::pop();
+		$job->run();
+		
+		$this->assertTrue( wfLocalFile( 'UploadFromUrlTest.png' )->exists() );		
+		$this->assertTrue( (bool)$talk->getArticleId( GAID_FOR_UPDATE ), 'User talk exists' );
+		
 		$this->deleteFile( 'UploadFromUrlTest.png' );
-	 }
+		
+		$talkRev = Revision::newFromTitle( $talk );
+		$talkSize = $talkRev->getSize();
+		
+		$exception = false;
+		try {
+			$data = $this->doApiRequest( array(
+				'action' => 'upload',
+				'filename' => 'UploadFromUrlTest.png',
+				'url' => 'http://bits.wikimedia.org/skins-1.5/common/images/poweredby_mediawiki_88x31.png',
+				'asyncdownload' => 1,
+				'token' => $token,
+				'leavemessage' => 1,
+			) );
+		} catch ( UsageException $e ) {
+			$exception = true;
+			$this->assertEquals( 'Using leavemessage without ignorewarnings is not supported', $e->getMessage() );
+		}
+		$this->assertTrue( $exception );
+		
+		$job = Job::pop();
+		$this->assertFalse( $job );
+		
+		return;
+		
+		// Broken until using leavemessage with ignorewarnings is supported
+		$job->run();
+		
+		$this->assertFalse( wfLocalFile( 'UploadFromUrlTest.png' )->exists() );
+		
+		$talkRev = Revision::newFromTitle( $talk );
+		$this->assertTrue( $talkRev->getSize() > $talkSize, 'New message left' );
+
+		
+	}
+	
+	/**
+	 * Helper function to perform an async upload, execute the job and fetch 
+	 * the status
+	 * 
+	 * @return array The result of action=upload&statuskey=key
+	 */
+	private function doAsyncUpload( $token, $ignoreWarnings = false, $leaveMessage = false ) {
+		$params = array(
+			'action' => 'upload',
+			'filename' => 'UploadFromUrlTest.png',
+			'url' => 'http://bits.wikimedia.org/skins-1.5/common/images/poweredby_mediawiki_88x31.png',
+			'asyncdownload' => 1,
+			'token' => $token,
+		);
+		if ( $ignoreWarnings ) {
+			$params['ignorewarnings'] = 1;
+		}
+		if ( $leaveMessage ) {
+			$params['leavemessage'] = 1;
+		}
+		
+		$data = $this->doApiRequest( $params );
+		$this->assertEquals( $data[0]['upload']['result'], 'Queued' );
+		$this->assertTrue( isset( $data[0]['upload']['statuskey'] ) );
+		$statusKey = $data[0]['upload']['statuskey'];
+		
+		$job = Job::pop();
+		$this->assertEquals( 'UploadFromUrlJob', get_class( $job ) );
+		
+ 		$status = $job->run();
+		$this->assertTrue( $status );
+		
+		$data = $this->doApiRequest( array( 
+			'action' => 'upload',
+			'statuskey' => $statusKey,
+			'token' => $token,
+		) );
+		
+		return $data;
+	}
+	
 
 	/**
 	 *
 	 */
-	function deleteFile( $name ) {
+	protected function deleteFile( $name ) {
 		$t = Title::newFromText( $name, NS_FILE );
 		$this->assertTrue($t->exists(), "File '$name' exists");
 
